welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:14: error: type mismatch;
 found   : Unit
 required: Boolean
				else if(aSmile==false&&bSmile==false)
                                     ^